@@ -1,3 +1,7 @@
+Aug 01, 2007 - chris
+o removed status codes HAM_SHORT_READ and HAM_SHORT_WRITE; instead, 
+    HAM_IO_ERROR is now used
+
 Jul 22, 2007 - chris
 o when opening an environment file with ham_open (as a database), the first
     database in the environment is now opened
